--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,8 +44,14 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     //noinspection GradleDependency
     implementation 'com.squareup.okhttp3:okhttp:4.10.0'
+    //noinspection GradleDependency
     implementation 'com.squareup.okhttp3:logging-interceptor:4.10.0'
+
+    // until
     implementation 'com.google.code.gson:gson:2.9.0'
+
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.2'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.2'
 
     // test
     testImplementation 'junit:junit:4.13.2'
