--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,8 +43,8 @@ dependencies {
     // networking
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
-    implementation 'com.squareup.okhttp3:okhttp:4.10.0'
-    implementation 'com.squareup.okhttp3:logging-interceptor:4.10.0'
+    implementation 'com.squareup.okhttp3:okhttp:5.0.0-alpha.7'
+    implementation 'com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.7'
 
     // until
     implementation 'com.google.code.gson:gson:2.9.0'
@@ -59,6 +59,9 @@ dependencies {
     implementation 'com.google.dagger:dagger-android-support:2.40.5'
     kapt 'com.google.dagger:dagger-android-processor:2.40.5'
     kapt 'com.google.dagger:dagger-compiler:2.40.5'
+
+    // log
+    implementation 'com.jakewharton.timber:timber:5.0.1'
 
     // test
     testImplementation 'junit:junit:4.13.2'
