--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,7 +35,6 @@ android {
 
     buildFeatures {
         dataBinding true
-        viewBinding true
     }
 }
 
@@ -50,8 +49,8 @@ dependencies {
     // networking
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
-    implementation 'com.squareup.okhttp3:okhttp:4.10.0'
-    implementation 'com.squareup.okhttp3:logging-interceptor:4.10.0'
+    implementation 'com.squareup.okhttp3:okhttp:5.0.0-alpha.7'
+    implementation 'com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.7'
 
     // until
     implementation 'com.google.code.gson:gson:2.9.0'
@@ -70,8 +69,14 @@ dependencies {
     // log
     implementation 'com.jakewharton.timber:timber:5.0.1'
 
+    // androidx
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.5.0'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.0'
+    implementation "androidx.activity:activity-ktx:1.5.0"
+    implementation "androidx.fragment:fragment-ktx:1.5.0"
+
+    // other
+    implementation 'com.github.wada811:DataBinding-ktx:6.1.0'
 
     // test
     testImplementation 'junit:junit:4.13.2'
