--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,6 +51,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'com.squareup.okhttp3:okhttp:5.0.0-alpha.7'
     implementation 'com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.7'
+    implementation 'com.squareup.retrofit2:adapter-rxjava3:2.9.0'
 
     // until
     implementation 'com.google.code.gson:gson:2.9.0'
@@ -77,6 +78,11 @@ dependencies {
 
     // other
     implementation 'com.github.wada811:DataBinding-ktx:6.1.0'
+
+    // rx
+    implementation 'io.reactivex.rxjava3:rxjava:3.0.6'
+    implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
+    implementation 'io.reactivex.rxjava3:rxkotlin:3.0.1'
 
     // test
     testImplementation 'junit:junit:4.13.2'
