--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,34 +47,40 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
 
     // networking
-    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
-    implementation 'com.squareup.okhttp3:okhttp:5.0.0-alpha.7'
-    implementation 'com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.7'
+    def retrofit_version = "2.9.0"
+    def okhttp3_version = "5.0.0-alpha.7"
+    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
+    implementation "com.squareup.okhttp3:okhttp:$okhttp3_version"
+    implementation "com.squareup.okhttp3:logging-interceptor:$okhttp3_version"
     implementation 'com.squareup.retrofit2:adapter-rxjava3:2.9.0'
 
     // until
     implementation 'com.google.code.gson:gson:2.9.0'
 
     // coroutines
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.2'
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.2'
+    def coroutines_version = "1.6.2"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
 
     // dagger
-    implementation 'com.google.dagger:dagger:2.40.5'
-    implementation 'com.google.dagger:dagger-android:2.40.5'
-    implementation 'com.google.dagger:dagger-android-support:2.40.5'
-    kapt 'com.google.dagger:dagger-android-processor:2.40.5'
-    kapt 'com.google.dagger:dagger-compiler:2.40.5'
+    def dagger_version = "2.40.5"
+    implementation "com.google.dagger:dagger:$dagger_version"
+    implementation "com.google.dagger:dagger-android:$dagger_version"
+    implementation "com.google.dagger:dagger-android-support:$dagger_version"
+    kapt "com.google.dagger:dagger-android-processor:$dagger_version"
+    kapt "com.google.dagger:dagger-compiler:$dagger_version"
 
     // log
     implementation 'com.jakewharton.timber:timber:5.0.1'
 
     // androidx
-    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.5.0'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.0'
-    implementation "androidx.activity:activity-ktx:1.5.0"
-    implementation "androidx.fragment:fragment-ktx:1.5.0"
+    def lifecycle_version = "2.5.0"
+    def ktx_version = "1.5.0"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
+    implementation "androidx.activity:activity-ktx:$ktx_version"
+    implementation "androidx.fragment:fragment-ktx:$ktx_version"
 
     // other
     implementation 'com.github.wada811:DataBinding-ktx:6.1.0'
