--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,12 +55,13 @@ dependencies {
 
     // networking
     def retrofit_version = "2.9.0"
-    def okhttp3_version = "5.0.0-alpha.10"
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
     implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
+    implementation "com.squareup.retrofit2:adapter-rxjava3:$retrofit_version"
+
+    def okhttp3_version = "5.0.0-alpha.10"
     implementation "com.squareup.okhttp3:okhttp:$okhttp3_version"
     implementation "com.squareup.okhttp3:logging-interceptor:$okhttp3_version"
-    implementation 'com.squareup.retrofit2:adapter-rxjava3:2.9.0'
 
     // until
     implementation 'com.google.code.gson:gson:2.9.0'
@@ -83,11 +84,11 @@ dependencies {
 
     // androidx
     def lifecycle_version = "2.5.0"
-    def ktx_version = "1.5.0"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-process:$lifecycle_version"
 
+    def ktx_version = "1.5.0"
     implementation "androidx.activity:activity-ktx:$ktx_version"
     implementation "androidx.fragment:fragment-ktx:$ktx_version"
 
