--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,7 +36,7 @@
         </activity>
 
         <service
-            android:name="com.example.baseandroid.ui.application.MyApplicationFirebaseMessagingService"
+            android:name="com.example.baseandroid.service.MyApplicationFirebaseMessagingService"
             android:exported="false">
             <intent-filter>
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
