--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
     package="com.example.baseandroid">
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:name=".ui.application.MyApplication"
@@ -19,22 +19,13 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
-            android:name=".ui.detail.DetailActivity"
-            android:exported="false" />
-        <activity
-            android:name=".ui.home.HomeActivity"
-            android:exported="false"
-            android:screenOrientation="sensor" />
-        <activity
-            android:name=".ui.login.LoginActivity"
-            android:exported="true"
-            android:screenOrientation="sensor">
+            android:name=".ui.proxy.ProxyActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <service
             android:name="com.example.baseandroid.service.MyApplicationFirebaseMessagingService"
             android:exported="false">
@@ -43,4 +34,5 @@
             </intent-filter>
         </service>
     </application>
+
 </manifest>
