--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -40,7 +40,7 @@ jobs:
           distribution: 'zulu'
           java-version: '11'
       - name: Lint debug flavor
-        run: bash ./gradlew lintDebug --stacktrace
+        run: bash ./gradlew lintDevDebug --stacktrace
       - name: Lint results
         uses: actions/upload-artifact@v3
         with:
@@ -59,7 +59,7 @@ jobs:
           distribution: 'zulu'
           java-version: '11'
       - name: Build debug APK
-        run: bash ./gradlew assembleDebug --stacktrace
+        run: bash ./gradlew assembleDev --stacktrace
       - name: Upload APK
         uses: actions/upload-artifact@v3
         with:
