--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,7 @@ allprojects {
 
     tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
         kotlinOptions {
-            freeCompilerArgs = ['-Xjvm-default=enable'] //enable or compatibility
+            freeCompilerArgs = ['-Xjvm-default=all-compatibility'] //enable or compatibility
             jvmTarget = "11"
         }
     }
