--- a/.github/workflows/ktlint.yml
+++ b/.github/workflows/ktlint.yml
@@ -13,10 +13,10 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - run: |
-          curl -sSLO https://github.com/pinterest/ktlint/releases/download/0.44.0/ktlint && chmod a+x ktlint && sudo mv ktlint /usr/local/bin/
+          curl -sSLO https://github.com/pinterest/ktlint/releases/download/0.47.1/ktlint && chmod a+x ktlint && sudo mv ktlint /usr/local/bin/
       - name: run ktlint
         run: |
-          ktlint --reporter=checkstyle,output=build/ktlint-report.xml
+          ktlint --disabled_rules=no-wildcard-imports --reporter=checkstyle,output=build/ktlint-report.xml
         continue-on-error: true
       - uses: yutailang0119/action-ktlint@v3
         with:
