--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,17 +1,9 @@
-# Use the latest 2.1 version of CircleCI pipeline process engine.
-# See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
 
-# Define a job to be invoked later in a workflow.
-# See: https://circleci.com/docs/2.0/configuration-reference/#jobs
 jobs:
   unit-test:
-    # Specify the execution environment. You can specify an image from Dockerhub or use one of our Convenience Images from CircleCI's Developer Hub.
-    # See: https://circleci.com/docs/2.0/configuration-reference/#docker-machine-macos-windows-executor
     docker:
       - image: cimg/android:2022.09.2-browsers
-    # Add steps to the job
-    # See: https://circleci.com/docs/2.0/configuration-reference/#steps
     steps:
       - checkout
       - run:
@@ -42,16 +34,19 @@ jobs:
           name: "Generate APK and upload to Store"
           command: "bundle exec fastlane beta"
 
-# Invoke jobs via workflows
-# See: https://circleci.com/docs/2.0/configuration-reference/#workflows
 workflows:
   unit-test:
     jobs:
       - unit-test
-  to-store:
-    jobs:
+      - slack/on-hold:
+          context: slack-secrets
+          requires:
+            - unit-test
+      - pause_workflow:
+          requires:
+            - unit-test
+            - slack/on-hold
+          type: approval
       - to-store:
-          filters:
-                branches:
-                  only:
-                    - master
+          requires:
+            - pause_workflow
