--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -3,10 +3,10 @@ name: android ci
 on:
   pull_request:
     branches:
-      - 'master'
+      - 'develop'
   push:
     branches:
-      - 'master'
+      - 'develop'
 
 jobs:
   test:
