--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -41,6 +41,23 @@ jobs:
         with:
           name: app
           path: app/build/reports/lint-results-devDebug.html
+  codecov:
+    name: Code coverage
+    runs-on: ubuntu-22.04
+    steps:
+      - uses: actions/checkout@v3
+      - name: set up JDK
+        uses: actions/setup-java@v3
+        with:
+          distribution: zulu
+          java-version: "11"
+      - name: Code coverage debug flavor
+        run: bash ./gradlew testDevDebugUnitTestCoverage --stacktrace
+      - name: Code coverage results
+        uses: actions/upload-artifact@v3
+        with:
+          name: app
+          path: app/build/reports/jacoco/testDevDebugUnitTestCoverage/html/    
   apk:
     name: Generate APK
     runs-on: ubuntu-22.04
