--- a/gradle.properties
+++ b/gradle.properties
@@ -22,3 +22,8 @@ kotlin.code.style=official
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
 org.gradle.unsafe.configuration-cache=true
+android.enableJetifier=true
+RELEASE_STORE_FILE=../Untitled
+RELEASE_KEY_ALIAS=key0
+RELEASE_STORE_PASSWORD=123456
+RELEASE_KEY_PASSWORD=123456
