--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -88,7 +88,7 @@ jobs:
           name: apk
           path: app/build/outputs/apk/dev/debug/app-dev-debug.apk
   aab:
-    name: Generate APK
+    name: Generate AAB
     runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v3
@@ -97,9 +97,9 @@ jobs:
         with:
           distribution: zulu
           java-version: "11"
-      - name: Build debug APK
+      - name: Build debug AAB
         run: bash ./gradlew bundleDev --stacktrace
-      - name: Upload APK
+      - name: Upload AAB
         uses: actions/upload-artifact@v3
         with:
           name: aab
