--- a/app/config/dependencies.gradle
+++ b/app/config/dependencies.gradle
@@ -71,6 +71,13 @@ dependencies {
 
     // test
     testImplementation 'junit:junit:4.13.2'
+    testImplementation 'androidx.test:core-ktx:1.5.0'
+
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    androidTestImplementation 'androidx.test.ext:junit-ktx:1.1.5'
+
+    def mockkVersion = "1.11.0"
+    implementation "io.mockk:mockk:$mockkVersion"
+    testImplementation 'androidx.arch.core:core-testing:2.1.0'
+
 }
